--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
     "graphql-relay": "^0.6.0",
-    "mariadb": "^2.0.3"
+    "mariadb": "^2.0.3",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "node ./lib/server.js",
